# dorna_example

./: .gitignore  README.md  cargo_clean
src/api/api_node/: CMakeLists.txt  Cargo.toml  README.md  cmd  package.xml
src/api/api_node/src/: main.rs
src/camera/camera_driver/camera_driver/: driver.py  simulator.py
src/control_box/control_box_driver/: setup.py
src/control_box/control_box_msgs/: README.md
src/control_box/control_box_msgs/msg/: Goal.msg  Measured.msg
src/control_box/control_box_simulator/: CMakeLists.txt  Cargo.toml
src/control_box/control_box_simulator/src/: main.rs
src/cylinders/: CMakeLists.txt  Cargo.toml  package.xml
src/cylinders/src/: camera.rs  control_box.rs  cylinders.rs  dorna.rs  gripper.rs  main.rs
src/cylinders2/: CMakeLists.txt  Cargo.toml  package.xml
src/cylinders2/src/: camera.rs  cylinders.rs  main.rs  main_structs.rs  model_testing  model_testing_with_gripper  operator.rs
src/cylinders2_scene_master/: package.xml  setup.py
src/cylinders2_scene_master/cylinders2_scene_master/: cylinders2_scene_master.py
src/dorna2/dorna2/: CMakeLists.txt  package.xml
src/dorna2/dorna2/urdf/: dorna.urdf
src/dorna2/dorna2_driver/dorna2_driver/: dorna_driver.py
src/dorna_example/bringup/: CMakeLists.txt
src/dorna_example/bringup/config/: config.rviz  cylinders.rviz  cylinders2.rviz  dorna.rviz
src/dorna_example/bringup/launch/: simulation.launch.py  simulation2.launch.py  students.launch.py
src/dorna_example/bringup/transforms/: active_transforms2.json  static_transforms.json  static_transforms2.json
src/dorna_example/camera/camera_driver/: package.xml
src/dorna_example/camera/camera_driver/camera_driver/: simulator.py  spnode.py
src/dorna_example/camera/camera_msgs/: CMakeLists.txt  package.xml
src/dorna_example/camera/camera_msgs/msg/: Goal.msg  Measured.msg
src/dorna_example/control_box/control_box_driver/control_box_driver/: driver.py  simulator.py  spnode.py
src/dorna_example/control_box/control_box_msgs/: CMakeLists.txt
src/dorna_example/control_box/control_box_msgs/action/: SetLight.action
src/dorna_example/control_box/control_box_msgs/msg/: Goal.msg  Measured.msg
src/dorna_example/control_box/control_box_simulator/: CMakeLists.txt  Cargo.toml  package.xml
src/dorna_example/control_box/control_box_simulator/src/: main.rs
src/dorna_example/cylinders2_scene_master/: package.xml  setup.cfg  setup.py
src/dorna_example/cylinders2_scene_master/cylinders2_scene_master/: add_remove_cube_tester.py  cylinders2_scene_master.py  gripping_tester.py  move_robots_tester.py  tester.py
src/dorna_example/cylinders2_scene_master/meshes/: photoneo.dae
src/dorna_example/gripper/gripper_msgs/: CMakeLists.txt  package.xml
src/dorna_example/gripper/gripper_msgs/srv/: Close.srv  GetState.srv
src/dorna_example/gripper/gripper_simulator/: CMakeLists.txt  Cargo.toml  package.xml
src/dorna_example/gripper/gripper_simulator/src/: main.rs  resource_handler.rs
src/dorna_example/launch/: simulation.launch.py  test.launch.py
src/dorna_example/transforms/: static_transforms.json
src/gripper/gripper_msgs/: CMakeLists.txt
src/gripper/gripper_msgs/msg/: Measured.msg
src/gripper/gripper_simulator/: Cargo.toml
src/gripper/gripper_simulator/src/: main.rs
src/opc_ros2/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.xml  params.yaml
src/opc_ros2/src/: main.rs
src/opcua_ros2_bridge/: CMakeLists.txt  package.xml
src/opcua_ros2_bridge/src/: main.rs
src/robot_support/dorna_meshes/: CMakeLists.txt  README.md
src/robot_support/robot_gui/: package.xml
src/robot_support/robot_gui/robot_gui/: robot_gui.py
src/robot_support/robot_msgs/: CMakeLists.txt  package.xml
src/robot_support/robot_msgs/msg/: RobotGoal.msg  RobotState.msg
src/robot_support/robot_simulator/robot_simulator/: main.py  spnode.py
src/robot_support/robot_state_publisher/: CMakeLists.txt
src/ros2_scene_manipulation/: CMakeLists.txt  LICENSE  README.md
src/ros2_scene_manipulation/include/: scene_manipulation_service.h
src/ros2_scene_manipulation/src/: main.cpp  scene_manipulation_service.cpp
src/ros2_scene_manipulation_msgs/: CMakeLists.txt  package.xml
src/scene_manipulation/ros2_scene_manipulation/: CMakeLists.txt  package.xml
src/scene_manipulation/ros2_scene_manipulation/include/: conversions.h  scene_manipulation_service.h
src/sp/sp_messages/: CMakeLists.txt
src/sp/sp_messages/msg/: ResourceGoal.msg  ResourceMeasured.msg
src/sp/sp_operator/sp_operator/: package.xml
src/sp/sp_operator/sp_operator/sp_operator/: main.py
src/sp/sp_operator/sp_operator_msgs/: CMakeLists.txt
src/sp/sp_operator/sp_operator_msgs/msg/: Goal.msg  State.msg
src/sp/sp_ui/sp_ui/: main.py
src/sp_environment/: CMakeLists.txt  Cargo.toml  README.md  package.xml
src/sp_environment/src/: main.rs
src/sp_launch/: CMakeLists.txt  Cargo.toml  package.xml
src/sp_launch/src/: main.rs
src/sp_model/: CMakeLists.txt  Cargo.toml  package.xml
src/sp_model/src/: control_box.rs  cyliders.rs  cylinders.rs  cylinders2.rs  cylinders2_structs.rs  gripper.rs  lib.rs  main.rs
src/sp_resources/: Cargo.toml
src/sp_resources/src/: camera.rs  control_box.rs  dorna.rs  gripper.rs
src/sp_test/: Cargo.toml
src/sp_test/src/: main.rs
ws/src/cylinders/: CMakeLists.txt  package.xml
ws/src/dorna_example/bringup/: CMakeLists.txt  README.md  package.xml
ws/src/dorna_example/bringup/launch/: simulation.launch.py
ws/src/dorna_example/camera/camera_driver/camera_driver/: simulator.py
ws/src/dorna_example/control_box/control_box_driver/control_box_driver/: driver.py
ws/src/robot_support/robot_gui/robot_gui/: robot_gui.py
ws/src/sp/sp_operator/sp_operator/sp_operator/: main.py
