[package]
name = "cylinders2"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sp-domain = { path = "/home/martin/sp/sp-domain" }
# sp-runner = { path = "/home/martin/sp/sp-runner" }
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", rev = "283db0d" }
sp-runner = { git = "https://github.com/sequenceplanner/sp-rust", rev = "283db0d" }

sp-resources = {path = "../sp_resources/"}

failure = "0.1.5"

[dev-dependencies]
serial_test = "0.4.0"
