[package]
name = "cylinders2"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sp-domain = { path = "/Users/kristofer/sw/sp-rust/sp-domain" }
# sp-runner = { path = "/Users/kristofer/sw/sp-rust/sp-runner" }
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", rev = "dd162a9" }
sp-runner = { git = "https://github.com/sequenceplanner/sp-rust", rev = "dd162a9" }

sp-resources = {path = "../sp_resources/"}

failure = "0.1.5"

[dev-dependencies]
serial_test = "0.4.0"
