[package]
name = "opc_ros2"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer.bengtsson@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r" }
#r2r = {path = "/Users/kristofer/sw/r2r" }
failure = "0.1.8"
serde_json = "1.0"
opcua-client = "0.7"

[workspace]
