[package]
name = "sp_launch"
version = "0.5.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"


[dependencies]
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust.git", rev = "20f9d43" }
sp-runner = { git = "https://github.com/sequenceplanner/sp-rust.git", rev = "20f9d43" }
# sp-domain = { path = "/Users/martin/sp/sp-rust/sp-domain" }
# sp-runner = { path = "/Users/martin/sp/sp-rust/sp-runner" }
r2r = "0.5.3"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }
