[package]
name = "sp_model"
version = "0.5.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"


[dependencies]
sp-domain = { path = "/Users/martin/sp/sp-rust/sp-domain" }
sp-formal = { path = "/Users/martin/sp/sp-rust/sp-formal" }
r2r = "0.5.3"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }
