<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sp_model</name>
  <version>0.0.1</version>
  <description>cylinders sp model</description>
  <maintainer email="martin.dahl@gmail.com">Martin Dahl</maintainer>
  <license>MIT</license>
  <author>Martin Dahl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sp_operator_msgs</build_depend>
  <build_depend>sp_messages</build_depend>
  <build_depend>control_box_msgs</build_depend>
  <build_depend>camera_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <build_depend>gripper_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sp_operator_msgs</exec_depend>
  <exec_depend>sp_messages</exec_depend>
  <exec_depend>control_box_msgs</exec_depend>
  <exec_depend>camera_msgs</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>gripper_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
