[package]
name = "sp_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2r = "0.7.0"
tokio = { version = "1", features = ["full"] }
sp_domain = { path = "/Users/martin/sp/sp/sp_domain" }
sp_model = { path = "/Users/martin/sp/sp/sp_model" }
sp_runner = { path = "/Users/martin/sp/sp/sp_runner" }
