[package]
name = "control_box_simulator"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# We use a custom profile to keep colcon
# separate from "normal" rust building.
[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.7.0"
serde_json = "1.0"
futures = "0.3.15"

[workspace]
