[package]
name = "gripper_simulator"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.2.0" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
rand = "0.7"

[workspace]
